me falta solucionar el cerrar sesion y errores de sincronismo

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,251 +1,59 @@
-<br>
-<div class="container">
-	<div class="row col-lg-12 col-sm-12 text-center">
-		<h1 class="fw-light">Lista de Usuarios</h1>
-	</div>
-	<br>
-	<div class="row">
-		<div class="col-lg-4 col-12">
-			<div class="row">
-				<div class="col-4 d-block d-sm-block d-md-none">
-					<button type="button" class="btn btn-warning" (click)="modal.open(insert)">Insertar</button>
-				</div>
-				<div class="col-4 d-block d-sm-block d-md-none">
-					<button type="button" class="btn btn-warning" (click)="modal.open(update)">Actualizar</button>
-				</div>
-				<div class="col-4 d-block d-sm-block d-md-none">
-					<button type="button" class="btn btn-danger">Eliminar</button>
-				</div>
-			</div>
+<div *ngIf="login;else loginAvailable" class="container">
+	<main class="form-signin">
+	  <form> 
+	    <div class="row pt-5"></div>
+	    <div class="row">
+	      <div class="col-lg-4"></div>
+	      <div class="col-lg-4">
+		<img class="mb-4 rounded mx-auto d-block" src="https://img.icons8.com/external-bearicons-blue-bearicons/64/000000/external-login-call-to-action-bearicons-blue-bearicons-1.png" alt="" width="72" height="57">
+		<h1 class="h3 mb-3 fw-normal text-center">Iniciar Sesión</h1>
+	      </div>
+	      <div class="col-lg-4"></div>
+	    </div>
+    
+	    <div class="row pb-3">
+	      <div class="col-lg-4"></div>
+	      <div class="col-lg-4">
+		<div class="form-floating">
+		  <input type="email" #emailLogin class="form-control" id="floatingInput" placeholder="name@example.com">
+		  <label for="floatingInput">Correo Electrónico</label>
 		</div>
-		<div class="col-lg-4 col-md-2 d-none d-sm-none d-md-block">
-			<div class="row">
-				<div class="col-lg-4 d-none d-sm-none d-md-block">
-					<button type="button" class="btn btn-warning" (click)="modal.open(insert)">Insertar</button>
-				</div>
-				<div class="col-lg-4 d-none d-sm-none d-md-block">
-					<button type="button" class="btn btn-warning" (click)="modal.open(update)">Actualizar</button>
-				</div>
-				<div class="col-lg-4 d-none d-sm-none d-md-block">
-					<button type="button" class="btn btn-danger" (click)="deleteAlert()">Eliminar</button>
-				</div>
-			</div>
+	      </div>
+	      <div class="col-lg-4"></div>
+	    </div>
+	    
+	    <div class="row pb-3">
+	      <div class="col-lg-4"></div>
+	      <div class="col-lg-4">
+		<div class="form-floating">
+		  <input type="password" #passLogin class="form-control" id="floatingInput" placeholder="name@example.com">
+		  <label for="floatingInput">Contraseña</label>
 		</div>
-		<div class="col-lg-4 col-md-2 d-none d-sm-none d-md-block"></div>
-	</div>
-	<div class=row>
-		<div class="col-sm-12 col-lg-6 form-floating pt-2">
-			<input readonly type="text" class="form-control" id="floatingInput" value={{userList[index].username}}>
-			<label for="floatingInput">Usuario</label>
-		</div>
-		<div class="col-sm-12 col-lg-6 form-floating pt-2">
-			<input readonly type="text" class="form-control" id="floatingInput" value={{userList[index].identification}}>
-			<label for="floatingInput">Identificacion</label>
-		</div>
-	</div>	
-	<div class=row>
-		<div class="col-sm-12 col-lg-6 form-floating pt-2">
-			<input readonly type="text" class="form-control" id="floatingInput" value={{userList[index].name}}>
-			<label for="floatingInput">Nombre</label>
-		</div>
-		<div class="col-sm-12 col-lg-6 form-floating pt-2">
-			<input readonly type="text" class="form-control" id="floatingInput" value={{userList[index].lastname}}>
-			<label for="floatingInput">Apellido</label>
-		</div>
-	</div>
-	<div class=row>
-		<div class="col-sm-12 col-lg-6 form-floating pt-2">
-			<input readonly type="text" class="form-control" id="floatingInput" value={{userList[index].age}}>
-			<label for="floatingInput">Edad</label>
-		</div>
-		<div class="col-sm-12 col-lg-6 form-floating pt-2">
-			<input readonly type="text" class="form-control" id="floatingInput" value={{userList[index].email}}>
-			<label for="floatingInput">Correo Electronico</label>
-		</div>
-	</div>
-	<div class=row>
-		<div class="col-sm-12 col-lg-6 form-floating pt-2">
-			<input readonly type="text" class="form-control" id="floatingInput" value={{userList[index].cellphone}}>
-			<label for="floatingInput">Telefono</label>
-		</div>
-		<div class="col-sm-12 col-lg-6 form-floating pt-2">
-			<input readonly type="text" class="form-control" id="floatingInput" value={{userList[index].address}}>
-			<label for="floatingInput">Direccion</label>
-		</div>
-	</div>
-	<!--
-	<div class=row>
-		<div *ngIf="companyList[0].status;else falseBlock" class="col-sm-12 col-lg-6 form-floating pt-2">
-			<input readonly type="text" class="form-control" id="floatingInput" value="Validate">
-			<label for="floatingInput">Company Status</label>
-		</div>
-		<div class="col-sm-12 col-lg-6 form-floating pt-2">
-			<input readonly type="text" class="form-control" id="floatingInput" value={{companyList[index].attendant}}>
-			<label for="floatingInput">Attendant Name</label>
-		</div>
-	</div>
+	      </div>
+	      <div class="col-lg-4"></div>
+	    </div>
 	
-	<ng-template #falseBlock>
-		<div class="col-sm-12 col-lg-6 form-floating pt-2 ">
-			<input readonly type="text" class="form-control" id="floatingInput" value="Decline">
-			<label for="floatingInput">Company Status</label>
-		</div>
-	</ng-template>
--->
-	<br>
-	<div class="row">
-		<div class="col-3 d-block d-sm-block d-md-none"></div>
-		<div class="col-3 d-block d-sm-block d-md-none">
-			<button type="button" class="btn btn-success btn-sm" (click)="decrementUser()">Anterior</button>
-		</div>
-		<div class="col-3 d-block d-sm-block d-md-none">
-			<button type="button" class="btn btn-info btn-sm" (click)="incrementUser()">Siguiente</button>
-		</div>
-		<div class="col-3 d-block d-sm-block d-md-none"></div>
-	</div>
-	<div class="row">
-		<div class="col-md-2 d-none d-sm-none d-md-block"></div>
-		<div class="col-md-2 d-none d-sm-none d-md-block"></div>
-		<div class="col-md-2 d-none d-sm-none d-md-block">
-			<button type="button" class="btn btn-success btn-sm" (click)="decrementUser()">Anterior</button>
-		</div>
-		<div class="col-md-2 d-none d-sm-none d-md-block">
-			<button type="button" class="btn btn-info btn-sm "(click)="incrementUser()">Siguiente</button>
-		</div>
-		<div class="col-md-2 d-none d-sm-none d-md-block"></div>
-		<div class="col-md-2 d-none d-sm-none d-md-block"></div>
-	</div>
-</div>
+	    <div class="row">
+	      <div class="col-lg-4"></div>
+	      <div class="col-lg-4">
+		<button class="w-100 btn btn-lg btn-primary" type="submit" (click)="loginUser(emailLogin.value,passLogin.value)">Iniciar</button>
+	      </div>
+	      <div class="col-lg-4"></div>
+	    </div>
+	    
+	    <div class="row">
+	      <div class="col-lg-4"></div>
+	      <div class="col-lg-4">
+		<p class="mt-5 mb-3 text-muted text-center">&copy; 2022</p>
+	      </div>
+	      <div class="col-lg-4"></div>
+	    </div>
+    
+	  </form>
+	</main>    
+      </div>
 
-<!--INSERT USER MODAL-->
-<ng-template #insert let-modal>
-	<div class="modal-header">
-		<h4 class="modal-title">Insertar Usuario</h4>
-		<button class="close" aria-label="close" type="button" (click)="modal.dismiss()">
-			<span aria-hidden="true">&times;</span>
-		</button>
-	</div>
-	<div class="modal-body">
-		<div class="row">
-			<div class="col-lg-12 form-floating pt-2 ">
-				<input type="text" #txtUserNew class="form-control" id="floatingInput" value="">
-				<label for="floatingInput">Usuario</label>
-			</div>
-			<div class="col-lg-12 form-floating pt-2 ">
-				<input type="password" #txtPassNew class="form-control" id="floatingInput" value="">
-				<label for="floatingInput">Contraseña</label>
-			</div>
-			<div class="col-lg-12 form-floating pt-2 ">
-				<input type="text" #txtIdenNew class="form-control" id="floatingInput" value="">
-				<label for="floatingInput">Identificacion</label>
-			</div>
-			<div class="col-lg-12 form-floating pt-2 ">
-				<input type="text" #txtNameNew  class="form-control" id="floatingInput" value="">
-				<label for="floatingInput">Nombre</label>
-			</div>
-			<div class="col-lg-12 form-floating pt-2 ">
-				<input type="text" #txtLastNameNew class="form-control" id="floatingInput" value="">
-				<label for="floatingInput">Apellido</label>
-			</div>
-			<div class="col-lg-12 form-floating pt-2 ">
-				<input type="text" #txtAgeNew  class="form-control" id="floatingInput" value="">
-				<label for="floatingInput">Edad</label>
-			</div>
-			<div class="col-lg-12 form-floating pt-2 ">
-				<input type="text" #txtEmailNew  class="form-control" id="floatingInput" value="">
-				<label for="floatingInput">Correo Electronico</label>
-			</div>
-			<div class="col-lg-12 form-floating pt-2 ">
-				<input type="text" #txtCellphoneNew  class="form-control" id="floatingInput" value="">
-				<label for="floatingInput">Telefono</label>
-			</div>
-			<div class="col-lg-12 form-floating pt-2 ">
-				<input type="text" #txtAddressNew  class="form-control" id="floatingInput" value="">
-				<label for="floatingInput">Direccion</label>
-			</div>
-			<!--
-			<div class="col-lg-12 form-floating pt-2 ">
-				<div ngbDropdown>
-					<button class={{btnStyle}} id="gfg" ngbDropdownToggle>{{validateButton}}</button>
-					<div ngbDropdownMenu="gfg">
-					  	<button ngbDropdownItem (click)="statusValidateButton()">Validate!</button>
-					  	<button ngbDropdownItem (click)="statusDeclineButton()">Decline!</button>
-					</div>
-				</div>	
-			</div>
-			-->
-		</div>
-	</div>
-	<br>
-	<div class="modal-footer">
-		<button type="button" class="btn btn-success" (click)="insertUser(txtUserNew.value,txtPassNew.value,txtIdenNew.value
-		,txtNameNew.value,txtLastNameNew.value,txtAgeNew.value,txtEmailNew.value,txtCellphoneNew.value,
-		txtAddressNew.value)">Insertar</button>
-	</div>
-</ng-template>
 
-<!--UPDATE USER MODAL-->
-<ng-template #update let-modal>
-	<div class="modal-header">
-		<h4 class="modal-title">Actualizar Usuario</h4>
-		<button class="close" aria-label="close" type="button" (click)="modal.dismiss()">
-			<span aria-hidden="true">&times;</span>
-		</button>
-	</div>
-	<div class="modal-body">
-		<div class="row">
-			<div class="col-lg-12 form-floating pt-2 ">
-				<input type="text" #txtUserNew class="form-control" id="floatingInput" value={{userList[index].username}}>
-				<label for="floatingInput">Usuario</label>
-			</div>
-			<div class="col-lg-12 form-floating pt-2 ">
-				<input type="password" #txtPassNew class="form-control" id="floatingInput" value={{userList[index].password}}>
-				<label for="floatingInput">Contraseña</label>
-			</div>
-			<div class="col-lg-12 form-floating pt-2 ">
-				<input type="text" #txtIdenNew class="form-control" id="floatingInput" value={{userList[index].identification}}>
-				<label for="floatingInput">Identificacion</label>
-			</div>
-			<div class="col-lg-12 form-floating pt-2 ">
-				<input type="text" #txtNameNew class="form-control" id="floatingInput" value={{userList[index].name}}>
-				<label for="floatingInput">Nombre</label>
-			</div>
-			<div class="col-lg-12 form-floating pt-2 ">
-				<input type="text" #txtLastNameNew class="form-control" id="floatingInput" value={{userList[index].lastname}}>
-				<label for="floatingInput">Apellido</label>
-			</div>
-			<div class="col-lg-12 form-floating pt-2 ">
-				<input type="text" #txtAgeNew class="form-control" id="floatingInput" value={{userList[index].age}}>
-				<label for="floatingInput">Edad</label>
-			</div>
-			<div class="col-lg-12 form-floating pt-2 ">
-				<input type="text" #txtEmailNew class="form-control" id="floatingInput" value={{userList[index].email}}>
-				<label for="floatingInput">Correo Electronico</label>
-			</div>
-			<div class="col-lg-12 form-floating pt-2 ">
-				<input type="text" #txtCellphoneNew class="form-control" id="floatingInput" value={{userList[index].cellphone}}>
-				<label for="floatingInput">Telefono</label>
-			</div>
-			<div class="col-lg-12 form-floating pt-2 ">
-				<input type="text" #txtAddressNew class="form-control" id="floatingInput" value={{userList[index].address}}>
-				<label for="floatingInput">Direccion</label>
-			</div>
-			<!--
-			<div class="col-lg-12 form-floating pt-2 ">
-				<div ngbDropdown>
-					<button class={{btnStyle}} id="gfg" ngbDropdownToggle>{{validateButton}}</button>
-					<div ngbDropdownMenu="gfg">
-					  	<button ngbDropdownItem (click)="statusValidateButton()">Validate!</button>
-					  	<button ngbDropdownItem (click)="statusDeclineButton()">Decline!</button>
-					</div>
-				</div>	
-			</div>
-			-->
-		</div>
-	</div>
-	<div class="modal-footer">
-		<button type="button" class="btn btn-success" (click)="UpdateUsers(txtUserNew.value,txtPassNew.value,txtIdenNew.value
-		,txtNameNew.value,txtLastNameNew.value,txtAgeNew.value,txtEmailNew.value,txtCellphoneNew.value,
-		txtAddressNew.value)">Actualizar</button>
-	</div>
+<ng-template #loginAvailable>
+	<app-hoja></app-hoja>
 </ng-template>
